2007-10-14  Jason Foreman  <jason@threeve.org>

Reviewed by Maciej.

        Fix http://bugs.webkit.org/show_bug.cgi?id=15145

        Ensure that if adjusting n to minimize the difference of n*intPow10(e-p+1) to x,
        that the property n < intPow10(p) is maintained.

        * kjs/number_object.cpp:
        (NumberProtoFunc::callAsFunction):

2007-10-14  Jason Foreman  <jason@threeve.org>

        Reviewed by Maciej.

        Adding test for http://bugs.webkit.org/show_bug.cgi?id=15145.

        * ChangeLog:
        * fast/js/number-toprecision-expected.txt: Added.
        * fast/js/number-toprecision.html: Added.
        * fast/js/resources/number-toprecision.js: Added.


Canonical link: https://commits.webkit.org/20560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26581 268f45cc-cd09-0410-ab3c-d52691b4dbfc